# ChangeLog for mail-client/sylpheed
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/sylpheed/ChangeLog,v 1.167 2006/03/07 13:32:29 hattya Exp $

  07 Mar 2006; Akinori Hattori <hattya@gentoo.org> sylpheed-2.2.0.ebuild:
  stable on x86.

*sylpheed-2.2.0 (18 Feb 2006)

  18 Feb 2006; Akinori Hattori <hattya@gentoo.org>
  +files/sylpheed-2.2-replace-aspell-with-enchant.diff,
  -sylpheed-2.2.0_beta8.ebuild, +sylpheed-2.2.0.ebuild:
  new upstream release. fixes bug #122779 and bug #123145.

*sylpheed-2.2.0_beta8 (07 Feb 2006)

  07 Feb 2006; Akinori Hattori <hattya@gentoo.org>
  -sylpheed-2.2.0_beta4.ebuild, +sylpheed-2.2.0_beta8.ebuild:
  new upstream release.

*sylpheed-2.2.0_beta4 (14 Jan 2006)

  14 Jan 2006; Akinori Hattori <hattya@gentoo.org>
  +sylpheed-2.2.0_beta4.ebuild:
  new upstream release.

*sylpheed-2.2.0_beta2 (28 Dec 2005)

  28 Dec 2005; Akinori Hattori <hattya@gentoo.org>
  -sylpheed-2.2.0_beta1.ebuild, +sylpheed-2.2.0_beta2.ebuild:
  new upstream release.

*sylpheed-2.2.0_beta1 (24 Dec 2005)

  24 Dec 2005; Akinori Hattori <hattya@gentoo.org> -sylpheed-2.1.9.ebuild,
  +sylpheed-2.2.0_beta1.ebuild:
  new upstream release.

*sylpheed-2.1.9 (16 Dec 2005)

  16 Dec 2005; Akinori Hattori <hattya@gentoo.org> -sylpheed-2.1.8.ebuild,
  +sylpheed-2.1.9.ebuild:
  new upstream release (development branch). fixes bug #115617.

*sylpheed-2.1.8 (14 Dec 2005)

  14 Dec 2005; Akinori Hattori <hattya@gentoo.org> -sylpheed-2.1.6.ebuild,
  +sylpheed-2.1.8.ebuild:
  new upstream release (development branch).

  16 Nov 2005; Akinori Hattori <hattya@gentoo.org>
  -sylpheed-2.0.0_rc1.ebuild, -sylpheed-2.0.1.ebuild,
  -sylpheed-2.0.2.ebuild, -sylpheed-2.0.3.ebuild:
  remove old ebuilds.

  16 Nov 2005; Akinori Hattori <hattya@gentoo.org> sylpheed-2.0.4.ebuild:
  stable on ia64 wrt security bug #111853.
