@@ -1,0 +1,1 @@
+MD5 727b4d51ebe305903894bb8daba690de sylpheed-2.2.2.tar.bz2 2510018
