@@ -1,6 +1,11 @@
 # ChangeLog for mail-client/sylpheed
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/sylpheed/ChangeLog,v 1.167 2006/03/07 13:32:29 hattya Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/sylpheed/ChangeLog,v 1.168 2006/03/07 13:36:35 hattya Exp $
+
+*sylpheed-2.2.2 (07 Mar 2006)
+
+  07 Mar 2006; Akinori Hattori <hattya@gentoo.org> +sylpheed-2.2.2.ebuild:
+  new upstream release.
 
   07 Mar 2006; Akinori Hattori <hattya@gentoo.org> sylpheed-2.2.0.ebuild:
   stable on x86.
